@@ -7,6 +7,9 @@ import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
@@ -35,9 +38,12 @@ public class LogController {
             return ResponseEntity.notFound().build();
         }
 
-        List<String> filteredLines = Files.lines(logPath)
-                .filter(line -> line.startsWith(targetDate.format(LOG_DATE_FORMAT)))
-                .toList();
+        List<String> filteredLines;
+        try (Stream<String> lines = Files.lines(logPath)) {
+            filteredLines = lines
+                    .filter(line -> line.startsWith(targetDate.format(LOG_DATE_FORMAT)))
+                    .collect(Collectors.toList());
+        }
 
         if (filteredLines.isEmpty()) {
             return ResponseEntity.noContent().build();
